refactor(code-cleanup): updated gitignore and eslint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,12 @@
 <div class="container">
-
     <!-- HEADER -->
+    <app-nav></app-nav>
     <img src="assets/svg/logo.svg" class="logo">
 
     <!-- CONTENT -->
     <div class="content">
-
         <router-outlet></router-outlet>
-
     </div>
 
     <!-- FOOTER -->
-
 </div>
