--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,6 @@
-.container {
+#container {
     height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     background-color: black;
-
-    .logo {
-        display: block;
-        margin: 0 auto;
-    }
 }
