fix: added router-outlet projection to nav component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div id="container">
     <!-- MOBILE -->
     <app-nav *ifScreenSize="'small'">
-        <!-- <router-outlet></router-outlet> -->
-        <app-content></app-content>
+        <router-outlet></router-outlet>
     </app-nav>
 
     <!-- TABLET & DESKTOP -->
