--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -1,6 +1,13 @@
+@import "src/app/shared/styles/variables";
+
 :host {
     height: inherit;
     width: inherit;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 @mixin transition($params) {
@@ -19,14 +26,6 @@
     transform: scale($params);
 }
 
-@mixin box-shadow($params) {
-    -webkit-box-shadow: $params;
-    -moz-box-shadow: $params;
-    -khtml-box-shadow: $params;
-    -o-box-shadow: $params;
-    box-shadow: $params;
-}
-
 @mixin rotate($params) {
     -webkit-transform: rotate($params);
     -moz-transform: rotate($params);
@@ -43,24 +42,61 @@
     opacity: $opacity;
 }
 
-@mixin border-radius($radius) {
-    -webkit-border-radius: $radius;
-    -moz-border-radius: $radius;
-    -khtml-border-radius: $radius;
-    -o-border-radius: $radius;
-    border-radius: $radius;
+@mixin box-shadow($box-shadow) {
+    -webkit-box-shadow: $box-shadow;
+    -moz-box-shadow: $box-shadow;
+    -khtml-box-shadow: $box-shadow;
+    -o-box-shadow: $box-shadow;
+    box-shadow: $box-shadow;
 }
 
 #container {
     height: 100%;
     width: 100%;
-    background: #000000;
+    background: black;
 }
 
 #container.menu {
     #content {
         @include opacity(0.3);
         @include scale(0.85);
+    }
+}
+
+#menu-btn {
+    position: absolute;
+    height: 22px;
+    width: 25px;
+    top: 3vh;
+    left: 7vw;
+    z-index: 40;
+    border-top: 2px solid $brand-green;
+    box-sizing: border-box;
+    cursor: pointer;
+    @include transition(all 0.3s ease-in);
+
+    @media (orientation: landscape) {
+        top: 8vh;
+        left: 5vw;
+    }
+
+    &:before {
+        position: absolute;
+        height: 2px;
+        width: 25px;
+        top: 8px;
+        background: $brand-green;
+        content: "";
+        @include transition(all 0.3s ease-in);
+    }
+    &:after {
+        position: absolute;
+        height: 2px;
+        width: 25px;
+        bottom: 0;
+        background: $brand-green;
+        content: "";
+        @include transition(all 0.3s ease-in);
     }
 }
 
@@ -81,62 +117,72 @@
         }
     }
 
-    #nav li {
-        width: 100%;
-        margin-left: 0;
-    }
-}
-
-#menu-btn {
-    position: absolute;
-    height: 22px;
-    width: 25px;
-    top: 24px;
-    left: 27px;
-    z-index: 30;
-    border-top: 2px solid #ffffff;
-    box-sizing: border-box;
-    cursor: pointer;
-    @include transition(all 0.3s ease-in);
-
-    &:before {
-        position: absolute;
-        height: 2px;
-        width: 25px;
-        top: 8px;
-        background: #ffffff;
-        content: "";
-        @include transition(all 0.3s ease-in);
-    }
-    &:after {
-        position: absolute;
-        height: 2px;
-        width: 25px;
-        bottom: 0;
-        background: #ffffff;
-        content: "";
-        @include transition(all 0.3s ease-in);
-    }
-}
-
-#nav {
-    width: 70%;
-    position: absolute;
-    z-index: 10;
-    list-style-type: none;
-    margin: 20% 15% 0 15%;
-    padding: 0;
-    overflow: hidden;
-
-    ul {
-        padding: 0;
+    #nav-container {
+        @include box-shadow(inset 0px 0px 5px 2px $translucent-brand-green);
+        z-index: 30;
+        opacity: 1;
+        overflow: scroll;
 
         li {
-            height: 30px;
+            width: 100%;
+            margin-left: 0 !important;
+            font-size: 1.4rem;
+            font-weight: 300;
+
+            @media (orientation: landscape) {
+                margin-top: 2vh;
+            }
+        }
+    }
+}
+
+#nav-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    background-color: $translucent-dark-green;
+    overflow: hidden;
+    opacity: 0;
+    @include transition(z-index 0.3s step-end);
+    @include transition(all 0.3s ease-in);
+
+    #nav {
+        padding: 20vh 10vw 0 10vw;
+
+        @media (orientation: landscape) {
+            padding: 28vh 8vw 0 8vw;
+        }
+    }
+
+    #social {
+        text-align: center;
+
+        .social-logo {
+            height: 24px;
+            width: 24px;
+            margin: 2vh 3vw;
+
+            @media (orientation: landscape) {
+                margin: 2vh 2vw;
+            }
+        }
+    }
+
+    #copyright {
+        text-align: center;
+        font-size: 0.8rem;
+        color: $dark-grey;
+    }
+
+    ul {
+        color: inherit;
+        list-style-type: none;
+
+        li {
+            height: 7vh;
             width: 0;
-            margin: 30px 0;
-            background: #ffffff;
-            @include transition(all 0.6s ease-in);
+            @include transition(all 0.4s ease-in);
 
             & + li {
                 margin-left: -40px;
@@ -153,15 +199,31 @@
     }
 }
 
-#content {
-    height: 100%;
-    z-index: 20;
-    @include transition(all 0.3s ease-in);
+.brand-logo {
+    display: block;
+    position: absolute;
+    height: 100px;
+    width: 115px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    padding-top: 3vh;
+    z-index: 50;
+}
 
-    .logo {
-        display: block;
-        height: 20%;
-        width: 38%;
-        margin: 8% auto 0;
+#content-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 20;
+    background-color: black;
+
+    #content {
+        padding: 20vh 10vw 0 10vw;
+        @include transition(all 0.3s ease-in);
+
+        @media (orientation: landscape) {
+            padding: 40vh 8vw 0 8vw;
+        }
     }
 }
