--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="header">
-    <img src="assets/svg/logo.svg" class="logo">
+    <img src="assets/svg/brand-logo.svg" class="logo">
 </div>
