refactor(nav-component): updated nav component styles

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -15,16 +15,18 @@
             </ul>
         </div>
 
-        <div id="social">
-            <a href="{{environment.githubUrl}}" target="_blank">
-                <img src="assets/svg/github-logo-white.svg" class="social-logo">
-            </a>
-              <a href="{{environment.linkedInUrl}}" target="_blank">
-                <img src="assets/svg/linkedIn-logo.svg" class="social-logo">
-            </a>
+        <div class="footer">
+            <div id="social">
+                <a href="{{environment.githubUrl}}" target="_blank">
+                    <img src="assets/svg/github-logo-white.svg" class="social-logo">
+                </a>
+                  <a href="{{environment.linkedInUrl}}" target="_blank">
+                    <img src="assets/svg/linkedIn-logo.svg" class="social-logo">
+                </a>
+            </div>
+    
+            <p id="copyright">&#169;2023 {{environment.author}}. All rights reserved.</p>
         </div>
-
-        <p id="copyright">&#169;2023 {{environment.author}}. All rights reserved.</p>
     </div>
 
     <!-- CONTENT -->
