--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -5,11 +5,6 @@
     width: inherit;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
 @mixin transition($params) {
     -webkit-transition: $params;
     -moz-transition: $params;
@@ -50,14 +45,20 @@ a {
     box-shadow: $box-shadow;
 }
 
+.no-transition {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -o-transition: none !important;
+    transition: none !important;
+}
+
 #container {
     height: 100%;
     width: 100%;
-    background: black;
 }
-
 #container.menu {
     #content {
+        position: fixed;
         @include opacity(0.3);
         @include scale(0.85);
     }
@@ -69,8 +70,8 @@ a {
     width: 25px;
     top: 3vh;
     right: 4vw;
-    z-index: 40;
-    border-top: 2px solid $brand-green;
+    z-index: 60;
+    border-top: 2px solid $primary-300;
     box-sizing: border-box;
     cursor: pointer;
     @include transition(all 0.3s ease-in);
@@ -85,7 +86,7 @@ a {
         height: 2px;
         width: 25px;
         top: 8px;
-        background: $brand-green;
+        background: $primary-300;
         content: "";
         @include transition(all 0.3s ease-in);
     }
@@ -94,7 +95,7 @@ a {
         height: 2px;
         width: 25px;
         bottom: 0;
-        background: $brand-green;
+        background: $primary-300;
         content: "";
         @include transition(all 0.3s ease-in);
     }
@@ -118,21 +119,21 @@ a {
     }
 
     #nav-container {
-        @include box-shadow(inset 0px 0px 5px 2px $translucent-brand-green);
-        z-index: 30;
+        @include box-shadow(inset 0px 0px 5px 2px $primary-600-translucent);
+        z-index: 40;
         opacity: 1;
         overflow: scroll;
     }
 }
 
 #nav-container {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
     z-index: 10;
-    background-color: $translucent-dark-green;
+    background-color: $primary-900-translucent;
     overflow: hidden;
     opacity: 0;
     @include transition(z-index 0.3s step-end);
@@ -164,7 +165,7 @@ a {
         padding-bottom: 2vh;
         text-align: center;
         font-size: 0.8rem;
-        color: $dark-grey;
+        color: $neutral-600;
     }
 
     ul {
@@ -187,7 +188,18 @@ a {
     }
 }
 
-.brand-logo {
+#blurred-header {
+    position: fixed;
+    height: 15vh;
+    width: 100%;
+    z-index: 30;
+    backdrop-filter: blur(50px);
+}
+#blurred-header.menu {
+    visibility: hidden;
+}
+
+#brand-logo {
     display: block;
     position: fixed;
     height: 100px;
@@ -203,23 +215,14 @@ a {
     }
 }
 
-#content-container {
+#content {
     position: absolute;
-    height: 100%;
-    width: 100%;
     z-index: 20;
-    background-color: black;
+    max-height: 100%;
+    padding: 18vh 8vw 0 8vw;
+    @include transition(all 0.3s ease-in);
 
-    #content {
-        margin: 20vh 7vw 0 5vw;
-        padding: 2vh 3vw;
-        // border: 1px solid $translucent-brand-green;
-        // border-left: 1px solid;
-        // background-color: $translucent-dark-green;
-        @include transition(all 0.3s ease-in);
-
-        @media (orientation: landscape) {
-            padding: 14vh 4vw 0 4vw;
-        }
+    @media (orientation: landscape) {
+        padding: 18vh 4vw 0 4vw;
     }
 }
