--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,5 +1,16 @@
 ///// Colors /////
-$brand-green: #6b997a;
-$translucent-brand-green: #6b997a69;
-$translucent-dark-green: #161716c4;
-$dark-grey: #5b5b5b;
+$background: #282b35;
+
+$primary-100: #b1e2da;
+$primary-300: #6fb9ad;
+$primary-400: #95bba2;
+$primary-600: #6a948d;
+$primary-900: #0f100f;
+
+$primary-600-translucent: #6a948d4d;
+$primary-900-translucent: #0f100fd4;
+
+$neutral-200: #b0b0b0;
+$neutral-300: #a9a9a9;
+$neutral-600: #5b5b5b;
+$neutral-900: #171717;
