--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div id="particles-js"></div>
+<div id="shader-layer"></div>
+
 <div id="container">
     <!-- MOBILE -->
     <app-nav *appIfScreenSize="'small'">
