--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,5 +1,5 @@
 ///// Colors /////
-$background: #282b35;
+$background: #121212;
 
 $primary-100: #b1e2da;
 $primary-300: #6fb9ad;
@@ -10,6 +10,7 @@ $primary-900: #0f100f;
 $primary-600-translucent: #6a948d4d;
 $primary-900-translucent: #0f100fd4;
 
+$neutral-100: #dadada;
 $neutral-200: #b0b0b0;
 $neutral-300: #a9a9a9;
 $neutral-600: #5b5b5b;
