--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,20 @@
+#shader-layer {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: repeating-linear-gradient(90deg, transparent, transparent 3px, #00000075 4px, #00000075 4px),
+        repeating-linear-gradient(0deg, transparent, transparent 3px, #00000075 4px, #00000075 4px);
+    z-index: 100;
+    pointer-events: none;
+}
+
 #container {
     height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+#particles-js {
+    position: fixed;
+    height: 100vh;
 }
