--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -1,48 +1,9 @@
+@import "src/app/shared/styles/mixins";
 @import "src/app/shared/styles/variables";
 
 :host {
     height: inherit;
     width: inherit;
-}
-
-@mixin transition($params) {
-    -webkit-transition: $params;
-    -moz-transition: $params;
-    -khtml-transition: $params;
-    -o-transition: $params;
-    transition: $params;
-}
-
-@mixin scale($params) {
-    -webkit-transform: scale($params);
-    -moz-transform: scale($params);
-    -khtml-transform: scale($params);
-    -o-transform: scale($params);
-    transform: scale($params);
-}
-
-@mixin rotate($params) {
-    -webkit-transform: rotate($params);
-    -moz-transform: rotate($params);
-    -khtml-transform: rotate($params);
-    -o-transform: rotate($params);
-    transform: rotate($params);
-}
-
-@mixin opacity($opacity) {
-    -webkit-opacity: $opacity;
-    -moz-opacity: $opacity;
-    -khtml-opacity: $opacity;
-    -o-opacity: $opacity;
-    opacity: $opacity;
-}
-
-@mixin box-shadow($box-shadow) {
-    -webkit-box-shadow: $box-shadow;
-    -moz-box-shadow: $box-shadow;
-    -khtml-box-shadow: $box-shadow;
-    -o-box-shadow: $box-shadow;
-    box-shadow: $box-shadow;
 }
 
 .no-transition {
@@ -57,10 +18,9 @@
     width: 100%;
 }
 #container.menu {
-    #content {
-        position: fixed;
+    #content-container {
         @include opacity(0.3);
-        @include scale(0.85);
+        // @include scale(0.85);
     }
 }
 
@@ -102,6 +62,10 @@
 }
 
 .menu {
+    #brand-logo {
+        opacity: 1 !important;
+    }
+
     #menu-btn {
         border-color: transparent;
 
@@ -113,7 +77,7 @@
         &:after {
             width: 25px;
             left: -2px;
-            bottom: 11px;
+            bottom: 10px;
             @include rotate(135deg);
         }
     }
@@ -131,10 +95,11 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
+    min-height: -webkit-fill-available;
+    width: 100vw;
     z-index: 10;
     background-color: $primary-900-translucent;
-    overflow: hidden;
+    overflow: scroll;
     opacity: 0;
     @include transition(z-index 0.3s step-end);
     @include transition(all 0.3s ease-in);
@@ -188,15 +153,12 @@
     }
 }
 
-#blurred-header {
+#blur {
     position: fixed;
-    height: 15vh;
+    height: 110px;
     width: 100%;
     z-index: 30;
     backdrop-filter: blur(50px);
-}
-#blurred-header.menu {
-    visibility: hidden;
 }
 
 #brand-logo {
@@ -205,9 +167,10 @@
     height: 100px;
     width: 115px;
     margin: 0 auto;
-    top: 1vh;
+    top: 0.5vh;
     left: 3vw;
     z-index: 50;
+    @include transition(all 0.3s ease-in);
 
     @media (orientation: landscape) {
         top: 2vh;
@@ -215,11 +178,12 @@
     }
 }
 
-#content {
+#content-container {
     position: absolute;
     z-index: 20;
-    height: 100%;
-    max-height: 100%;
+    height: 100vh; 
+    height: -webkit-fill-available;
+    min-height: 100vh;
     width: 100%;
     @include transition(all 0.3s ease-in);
 
