--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ body {
 }
 
 a {
-    color: $primary-100;
+    color: $primary-300;
     text-decoration: none;
 }
 a:hover {
@@ -46,7 +46,7 @@ h1 {
 }
 
 .content-container {
-    padding: 0 8vw 4vh 8vw;
+    padding: 20vh 8vw 4vh 8vw;
 }
 
 .title {
