--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div id="container" [ngClass]="{'menu': eventService.navOpen}">
-    <div id="blur"></div>
+    <div #blur id="blur"></div>
     <img src="assets/svg/brand-logo.svg" id="brand-logo">
     <div id="menu-btn" (click)="toggleNav()"></div>
 
@@ -16,6 +16,9 @@
 
         <div class="footer">
             <div id="social">
+                <a href="{{environment.stackOverflowUrl}}" target="_blank">
+                    <img src="assets/svg/stack-overflow-logo.svg" id="stack-overflow-logo" class="social-logo">
+                </a>
                 <a href="{{environment.githubUrl}}" target="_blank">
                     <img src="assets/svg/github-logo-white.svg" class="social-logo">
                 </a>
@@ -29,7 +32,5 @@
     </div>
 
     <!-- CONTENT -->
-    <div id="content-container">
-        <ng-content></ng-content>
-    </div>
+    <ng-content id="content-container"></ng-content>
 </div>
