--- a/src/app/shared/components/game-emulator/game-emulator.component.html
+++ b/src/app/shared/components/game-emulator/game-emulator.component.html
@@ -6,6 +6,6 @@
     This game is being emulated directly within the web browser.<br>
     Game files are hosted legally by <a href="https://archive.org/" target="_blank">archive.org</a>.
 </div>
-<div id="return-btn" (click)="closeEmulator()">
+<div id="close-btn" (click)="closeEmulator()">
     Close
 </div>
