--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -15,3 +15,6 @@ $neutral-200: #b0b0b0;
 $neutral-300: #a9a9a9;
 $neutral-600: #5b5b5b;
 $neutral-900: #171717;
+
+$neutral-100-translucent: #dadada05;
+$neutral-600-transulcent: #5b5b5b91;
