refactor(emulator): added reference to emulator library when emulator is open

--- a/src/app/shared/components/game-emulator/game-emulator.component.html
+++ b/src/app/shared/components/game-emulator/game-emulator.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div id="bottom-panel">
-    This game is being emulated directly within the web browser.<br>
+    This game is being emulated directly within the web browser using <a href="https://github.com/EmulatorJS/EmulatorJS" target="_blank">EmulatorJS</a>.<br>
     Game files are hosted legally by <a href="https://archive.org/" target="_blank">archive.org</a>.
 </div>
 <div id="close-btn" (click)="closeEmulator()">
