--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,9 +38,10 @@ ul {
 
     li {
         padding-bottom: 10px;
-    }
-    li:last-child {
-        padding-bottom: 0;
+        
+        &:last-child {
+            padding-bottom: 0;
+        }
     }
 }
 
@@ -61,34 +62,41 @@ h3 {
     margin-top: auto;
 }
 
+.title {
+    font-family: GillSansBoldItalic;
+    font-size: 1.8rem;
+    letter-spacing: -2px;
+    color: $primary-600;
+    text-transform: uppercase;
+    transform: scaleY(1.2) skew(-5deg);
+}
+
 .content-container {
     position: relative;
     padding: 0 6vw 4vh;
     z-index: 20;
 }
-
-.title {
-    margin-bottom: 3vh;
-    font-family: GillSansBoldItalic;
-    font-size: 3.5rem;
-    letter-spacing: -2px;
-    line-height: 3.8rem;
-    text-transform: uppercase;
-    transform: scaleY(1.2) skew(-5deg);
-    color: $primary-100;
-}
-
-.subtitle {
-    height: 5vh;
-    width: fit-content;
-    font-size: 2rem;
-    color: $primary-300;
-}
     
 .section {
     position: relative;
-    padding: 2vh 0 4vw;
-    z-index: 20;
+    padding-bottom: 12vw;
+
+    h1 {
+        color: $primary-100;
+        white-space: pre;
+
+        &::after {
+            content: "";
+            flex: 1 1;
+            margin: auto;
+            padding-top: 5px;
+            border-bottom: 1px solid $primary-600-translucent;
+        }
+    }
+
+    &:last-child {
+        padding-bottom: 0;
+    }
 }
 
 ///// Rules for content to display correctly in landscape mode on devices with notches /////
